k8s/chunker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chunker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chunker
  template:
    metadata:
      labels:
        app: chunker
    spec:
      containers:
      - name: chunker
        image: ghcr.io/kun99-p2/chunker/toktik-chunker:latest
        ports:
        - containerPort: 6379
      imagePullSecrets:
      - name: p2secret
