k8s/auth-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toktik-ub
  labels:
    app: toktik-ub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toktik-ub
  template:
    metadata:
      labels:
        app: toktik-ub
    spec:
      containers:
      - name: toktik-ub
        image: ghcr.io/kun99-p2/auth-backend/toktik-ub:latest
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: volume-pvc
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: toktik-ub
spec:
  selector:
    app: toktik-ub
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
