k8s/auth-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toktik-uf
  labels:
    app: toktik-uf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: toktik-uf
  template:
    metadata:
      labels:
        app: toktik-uf
    spec:
      containers:
      - name: toktik-uf
        image: ghcr.io/cs-muic/kun99-p2/toktik-uf
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: toktik-secret
---
kind: Service
apiVersion: v1
metadata:
  name: toktik-uf
spec:
  selector:
    app: toktik-uf
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  3000
