k8s/converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
      - name: converter
        image: ghcr.io/kun99-p2/video_processing/toktik-converter:latest
        ports:
        - containerPort: 6379
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: converter
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
