k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toktik-f
  labels:
    app: toktik-f
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toktik-f
  template:
    metadata:
      labels:
        app: toktik-f
    spec:
      containers:
        - name: toktik-f
          image: ghcr.io/kun99-p2/frontend/toktik-f:latest
      imagePullSecrets:
        - name: p2secret
---
apiVersion: v1
kind: Service
metadata:
  name: toktik-f
spec:
  selector:
    app: toktik-f
  type:  ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
