k8s/thumbnail_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbnail
spec:
  replicas: 3
  selector:
    matchLabels:
      app: thumbnail
  template:
    metadata:
      labels:
        app: thumbnail
    spec:
      containers:
      - name: thumbnail
        image: ghcr.io/cs-muic/kun99-p2/toktik-thumbnail
      - name: redis-server
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: thumbnail
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
