k8s/video-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toktik-vf
  labels:
    app: toktik-vf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toktik-vf
  template:
    metadata:
      labels:
        app: toktik-vf
    spec:
      containers:
      - name: toktik-vf
        image: ghcr.io/kun99-p2/videos-frontend/toktik-vf:latest
      imagePullSecrets:
      - name: ghcr-secret
---
kind: Service
apiVersion: v1
metadata:
  name: toktik-vf
spec:
  selector:
    app: toktik-vf
  type:  ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 4000
